# rrr

./: .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CNAME  CONTRIBUTING.markdown  Cargo.toml  LICENSE  README.md  compiled_manifest.json  copyright  index.html  makefile.toml  rrr-render.wasm  rustfmt.toml
.cargo/: config.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: audit.yml  auto-merge.yml  ci.yml  code-coverage.yml  web.yml
api/: crates.js  search-index.js  settings.html  source-files.js
api/head_native/: all.html  constant.HEIGHT.html  constant.WIDTH.html  fn.main.html  fn.run.html  index.html  sidebar-items.js
api/implementors/strum/: trait.EnumCount.js  trait.IntoEnumIterator.js
api/rrr/: all.html  index.html  sidebar-items.js  struct.Beat.html  struct.BpmChange.html  struct.Chart.html  struct.CompiledChart.html  struct.Note.html  struct.NoteRow.html  struct.RRR.html  struct.Settings.html  struct.SettingsBuilder.html
api/rrr/chart/: struct.Beat.html  struct.BpmChange.html  struct.Chart.html  struct.CompiledChart.html  struct.Note.html  struct.NoteRow.html
api/rrr/settings/: struct.Settings.html  struct.SettingsBuilder.html
api/rrr_core/: all.html  index.html  sidebar-items.js  struct.RRR.html
api/rrr_core/audio/: index.html  sidebar-items.js  struct.AudioPlayer.html  struct.AudioResampler.html  struct.ResamplingSpec.html
api/rrr_core/chart/: enum.NoteColor.html  enum.NoteDirection.html  index.html  sidebar-items.js  struct.Beat.html  struct.BinChart.html  struct.BpmChange.html  struct.Chart.html  struct.ColorIter.html  struct.CompiledChart.html  struct.Compressed.html  struct.Note.html  struct.NoteRow.html  struct.Parsed.html  struct.Parsing.html  struct.ReadyToParse.html  struct.RuntimeChart.html  struct.RuntimeNote.html  struct.SwfParser.html  trait.SwfParserState.html
api/rrr_core/download_chart/: fn.download_chart.html  index.html  sidebar-items.js
api/rrr_core/fetch/: enum.BytesFetch.html  fn.download_chart.html  fn.fetch.html  index.html  sidebar-items.js  struct.Artist.html  (+5 more)
api/rrr_gui/: all.html  enum.Msg.html  fn.__wasm_bindgen_generated_run.html  fn.main.html  fn.run.html  index.html  sidebar-items.js  struct.Model.html
api/rrr_head/: all.html  constant.HEIGHT.html  constant.TIME_STEP.html  constant.WIDTH.html  fn.build_window.html  fn.clear.html  fn.do_toggle_game_state_debug.html  fn.draw_notes.html  fn.draw_receptors.html  fn.get_noteskin.html  fn.get_pos_from_ms.html  fn.handle_keyboard_input.html  fn.init_log.html  fn.main.html  fn.rect.html  fn.run.html  fn.run_game_loop.html  index.html  sidebar-items.js  struct.Action.html  struct.Engine.html  struct.Game.html  struct.GameRenderer.html  trait.DeltaTime.html
api/rrr_render/: all.html  fn.amain.html  fn.draw_primitives.html  fn.main.html  fn.window_conf.html  index.html  sidebar-items.js  struct.Renderer.html  struct.RendererBuilder.html
api/worker/: all.html  fn.main.html  index.html
assets/: test-data.7z
book/: 404.html  index.html  print.html  searchindex.js  searchindex.json
book/prototypes/: index.html  sn01.html  sn02.html
crates/core/: Cargo.toml  README.md
crates/core/examples/: actions.rs  loaders.rs  positioning.rs  record.rs  turntable.rs
crates/core/src/: download_chart.rs  lib.rs  play.rs  query_settings.rs  record.rs  settings.rs  time.rs  turntable.rs
crates/core/src/audio/: mod.rs  output.rs  player.rs  resampler.rs
crates/core/src/chart/: beat.rs  bpm.rs  chart_impl.rs  mod.rs  note.rs  parser.rs
crates/core/src/chart/parser/: mod.rs  swf.rs
crates/core/src/fetch/: mod.rs  native.rs  playlist.rs  wasm.rs  worker.rs
crates/core/src/lerp/: mod.rs
crates/core/src/platform/: mod.rs
crates/core/src/platform/native/: fetch.rs  mod.rs
crates/core/src/platform/web/: fetch.rs  mod.rs  time.rs
crates/core/src/play/: actions.rs  field.rs  judge.rs  mod.rs  record.rs  settings.rs  stats.rs  turntable.rs
crates/core/src/settings/: mod.rs  query.rs
crates/core/src/time/: mod.rs  time_trait.rs
crates/core/src/time/native_time/: mod.rs
crates/core/src/time/wasm_time/: mod.rs
crates/head/: Cargo.toml  README.md  makefile.toml
crates/head-native/: Cargo.toml  makefile.toml
crates/head-native/src/: main.rs
crates/head-wasm/: .appveyor.yml  .travis.yml  Cargo.toml  makefile.toml  readme.markdown
crates/head-wasm/pkg/: package.json
crates/head-wasm/src/: lib.rs
crates/head-wasm/web/: humans.txt  manifest.json
crates/head-wasm/web/css/: style.css
crates/head/examples/: tape.rs
crates/head/src/: benchmark.rs  engine.rs  geo.rs  head.rs  lib.rs  main.rs  noteskin.rs  query.rs  settings.rs  sprites.rs  visibility.rs
crates/head/src/fetch/: playlist.rs
crates/head/src/native/: mod.rs
crates/head/src/platform/native/: fetch.rs  time.rs
crates/head/src/platform/web/: fetch.rs  mod.rs
crates/head/src/web/: mod.rs
crates/playlist/: Cargo.toml
crates/render/: Cargo.toml
crates/render/src/: lib.rs  main.rs  sprites.rs
crates/rrr/: Cargo.toml  README.md
crates/rrr/examples/: loaders.rs  tape.rs
crates/rrr/src/: chart.rs  download_chart.rs  lib.rs  play.rs  settings.rs  tape.rs  tape_deck.rs  turntable.rs
crates/rrr/src/audio/: mod.rs  output.rs  player.rs  resampler.rs
crates/rrr/src/chart/: chart_impl.rs  mod.rs  note.rs  parser.rs  swf_types.rs
crates/rrr_data/: Cargo.toml
crates/rrr_data/sample_data/: sample_data.json
crates/rrr_data/src/: lib.rs  songs.rs
crates/rrr_data/tests/: data.rs
crates/rrr_gui/: Cargo.toml  README.md  backup.index.html  index.html
crates/rrr_gui/src/: canvas.rs  lib.rs  main.rs  radial.rs
crates/rrr_gui/styles/: radial_menu.scss  rrr_window.scss  styles.scss
crates/rrr_tui/: Cargo.toml  README.md
crates/rrr_tui/data/: sample_data.json
crates/rrr_tui/src/: main.rs
crates/rrr_tui/src/types/: SingleSelectionList.rs
crates/wasm-workers/: Cargo.toml  makefile.toml
css/: style.css
docs/src/: README.md  SUMMARY.md
web/: index.html
web/css/: style.css
web/src/: judgement.js
(+317 files in other folders)
