[package]
name = "rrr-core"
version = "0.1.0"
authors = ["Fission", "Zageron"]
description = """
Rust Rust Revolution as a library.
"""
documentation = "https://docs.rs/rrr"
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
readme = "README.md"
keywords = ["game"]
categories = ["games"]
license = "AGPL-3.0"
edition = "2021"

[[bin]]
name = "worker"
path = "bin/worker.rs"

[lib]
crate-type = ["lib"]

[features]
default = ["develop", "serde"]
develop = ["log/max_level_info", "log/release_max_level_info"]
release = ["log/release_max_level_off"]

[package.metadata.docs.rs]
features = ["serde"]

[dependencies]
anyhow = "1.0.61"
btreemultimap = "0.1.0"
bytes = { version = "1.2.1", features = ["serde"] }
futures = { version = "0.3.21", features = ["thread-pool"] }
log = "0.4.17"
num-traits = "0.2.15"
rb = "0.4.0"
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
rubato = "0.12.0"
serde = { version = "1.0.143", optional = true, features = ["derive"] }
serde_bytes = "0.11.7"
strum = { version = "0.24.1", features = ["derive"] }
swf = { package = "swf", git = "https://github.com/ruffle-rs/ruffle.git", rev = "78ebf06f55eff05db6939166973bbfa08641300b" }
symphonia = { version = "0.5.1", default-features = false, features = ["mp3"] }
thiserror = "1.0.32"

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
cpal = { git = "https://github.com/RustAudio/cpal.git" }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
console_error_panic_hook = "0.1.7"
cpal = { git = "https://github.com/RustAudio/cpal.git", features = [
    "wasm-bindgen",
] }
gloo-net = { git = "https://github.com/cdata/gloo.git" }
gloo-worker = "0.2.0"
js-sys = "0.3.59"
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-test = "0.3.32"
wasm-bindgen-futures = "0.4.32"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies.web-sys]
version = "0.3.59"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Performance',
    'Window',
]

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dev-dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
