[package]
name = "rrr-core"
version = "0.1.0"
authors = ["Fission", "Zageron"]
description = """
Rust Rust Revolution as a library.
"""
documentation = "https://docs.rs/rrr"
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
readme = "README.md"
keywords = ["game"]
categories = ["games"]
license = "AGPL-3.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
default = ["develop", "serde"]
develop = ["log/max_level_info", "log/release_max_level_info", "serde"]
release = ["log/release_max_level_off", "serde"]

[package.metadata.docs.rs]
features = ["serde"]

[dependencies]
anyhow = "1.0.64"
btreemultimap = "0.1.0"
dasp = { git = "https://github.com/RustAudio/dasp", rev = "6b15274b471835e586089e54228e54601f92d391", features = [
    "interpolate",
    "interpolate-linear",
    "signal",
] }
inter-struct = "0.2.0"
log = "0.4.17"
num-traits = "0.2.15"
rb = "0.4.1"
serde = { version = "1.0.144", optional = true, features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
swf = "0.2.0"
symphonia = { version = "0.5.1", default-features = false, features = ["mp3"] }
thiserror = "1.0.34"

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
cpal = { git = "https://github.com/RustAudio/cpal.git" }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
console_error_panic_hook = "0.1.7"
cpal = { git = "https://github.com/RustAudio/cpal.git", features = [
    "wasm-bindgen",
] }
js-sys = "0.3.59"
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
wasm-bindgen-test = "0.3.32"
wasm-bindgen-futures = "0.4.32"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies.web-sys]
version = "0.3.59"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Performance',
    'Window',
]

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dev-dependencies]
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
