[package]
name = "rrr-head-wasm"
version = "0.1.0"
authors = ["Zageron <hello@adambryant.ca>"]
description = "WASM head for the RRR game."
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
readme = "README.md"
keywords = ["game"]
categories = ["games"]
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.63.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["rrr-head/release", "rrr-head/web"]

[dependencies]
anyhow = "1.0.65"
log = { version = "0.4.17" }
rrr-head = { path = "../head", default-features = false }
console_error_panic_hook = "0.1.7"
console_log = { version = "0.2.0", features = ["color"] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "Window",
    "Document",
    "EventListener",
    "HtmlCanvasElement",
    "FocusEvent",
]

[dev-dependencies]
bytes = { version = "1.2.1", features = ["serde"] }
wasm-bindgen-test = "0.3.33"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
