[package]
name = "rrr-head"
version = "0.1.0"
authors = ["Zageron <hello@adambryant.ca>"]
description = "Macroquad interface for the RRR game."
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
readme = "README.md"
keywords = ["game"]
categories = ["games"]
license = "AGPL-3.0"
edition = "2021"
publish = false
rust-version = "1.64.0"

[[bin]]
name = "worker"
path = "bin/worker.rs"

[features]
default = ["develop", "web"]
web = ["wgpu/webgl", "console_log"]
develop = [
    "log/max_level_info",
    "log/release_max_level_info",
    "serde",
    "rrr-core/develop",
]
release = ["log/release_max_level_off", "rrr-core/release", "serde"]

[dependencies]
anyhow = "1.0.64"
cfg-if = "1.0.0"
image = { version = "0.24.3", default-features = false, features = ["png"] }
inter-struct = "0.2.0"
lerp = "0.4.0"
log = { version = "0.4.17" }
pixels = { git = "https://github.com/parasyte/pixels.git", branch = "main" }
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
rrr-core = { path = "../core", default-features = false }
serde = { version = "1.0.144", optional = true, features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
winit = { version = "0.27.2", default-features = false, features = ['x11'] }

[target.'cfg(not(unix))'.dependencies]
winit = { version = "0.27.2", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = { version = "2.3.0" }
futures = "0.3.24"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "0.2.0", features = ["color"], optional = true }
futures = { version = "0.3.24", features = ["thread-pool"] }
gloo = "0.8.0"
gloo-net = { git = "https://github.com/cdata/gloo.git" }
gloo-worker = "0.2.1"
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
wgpu = "0.13.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.59"
features = ["Window", "Document", "EventListener"]

[dev-dependencies]
bytes = { version = "1.2.1", features = ["serde"] }
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
