[package]
name = "rrr-render"
version = "0.1.0"
authors = ["Fission", "Zageron"]
description = """
Renderer for RRR.
"""
documentation = "https://docs.rs/rrr"
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
readme = "README.md"
keywords = ["game"]
categories = ["games"]
license = "AGPL-3.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.65"
image = { version = "0.24.4", default-features = false, features = ["png"] }
pixels = { git = "https://github.com/parasyte/pixels.git", branch = "main" }
