[package]
name = "rrr"
version = "0.0.1"
authors = ["Fission", "Zageron"]
description = """
Rust Rust Revolution as a library.
"""
documentation = "https://docs.rs/rrr"
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
readme = "README.md"
keywords = ["game"]
categories = ["games"]
license = "AGPL-3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
features = ["serde"]

[dependencies]
log = "0.4.16"
rubato = "0.12.0"
serde = { version = "1.0.136", optional = true, features = ["derive"] }
swf-parser = "0.13.0"
symphonia = { version = "0.5.0", default-features = false, features = ["mp3"] }

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.26.0"
libpulse-simple-binding = "2.25.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
rb = "0.4.0"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
cpal = { git = "https://github.com/RustAudio/cpal.git", features = [
    "wasm-bindgen",
] }

[target.'cfg(target_family = "windows")'.dependencies]
cpal = { git = "https://github.com/RustAudio/cpal.git" }
