[package]
name = "rrr"
version = "0.0.1"
authors = ["Fission", "Zageron"]
description = """
Rust Rust Revolution as a library.
"""
documentation = "https://docs.rs/rrr"
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
readme = "README.md"
keywords = ["game"]
categories = ["games"]
license = "AGPL-3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
features = ["serde"]

[dependencies]
anyhow = "1.0.56"
log = "0.4.17"
rb = "0.4.0"
rubato = "0.11.0"
serde = { version = "1.0.139", optional = true, features = ["derive"] }
swf-parser = { git = "https://github.com/Zageron/swf-parser.git", branch = "master" }
symphonia = { version = "0.5.0", default-features = false, features = ["mp3"] }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
cpal = { git = "https://github.com/RustAudio/cpal.git" }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
cpal = { git = "https://github.com/RustAudio/cpal.git", features = [
    "wasm-bindgen",
] }
