[package]
name = "rrr"
version = "0.0.1"
authors = ["Fission", "Zageron"]
description = """
Rust Rust Revolution as a library.
"""
documentation = "https://docs.rs/rrr"
homepage = "https://github.com/flashflashrevolution/rrr"
repository = "https://github.com/flashflashrevolution/rrr"
readme = "README.md"
keywords = ["game"]
categories = ["games"]
license = "AGPL-3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["develop", "serde"]
develop = ["log/max_level_info", "log/release_max_level_info"]
release = ["log/release_max_level_off"]

[package.metadata.docs.rs]
features = ["serde"]

[dependencies]
anyhow = "1.0.58"
bytes = "1.2.0"
log = "0.4.17"
rb = "0.4.0"
reqwest = { version = "0.11.11", features = ["json"] }
rubato = "0.12.0"
serde = { version = "1.0.140", optional = true, features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
swf = { package = "swf", git = "https://github.com/ruffle-rs/ruffle.git", rev = "78ebf06f55eff05db6939166973bbfa08641300b" }
symphonia = { version = "0.5.1", default-features = false, features = ["mp3"] }
thiserror = "1.0.31"

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
cpal = { git = "https://github.com/RustAudio/cpal.git" }
tokio = { version = "1.20.0", features = ["full"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
cpal = { git = "https://github.com/RustAudio/cpal.git", features = [
    "wasm-bindgen",
] }
js-sys = "0.3.58"
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
wasm-bindgen-test = "0.3.31"
wasm-bindgen-futures = "0.4.31"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies.web-sys]
version = "0.3.58"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
]
